samples/_failures_safe/1761692179_f0c71e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de2170ae.c: In function ‘main’:
./samples/SAFE/__tmp_de2170ae.c:192:9: error: expected declaration or statement at end of input
  192 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_de2170ae.c:192:9: error: expected declaration or statement at end of input
